emi calculator inserted
